--- a/src/css/application.scss
+++ b/src/css/application.scss
@@ -9,7 +9,7 @@ $bodyFont: 'Courier New', monospace;
 
 // Cursor
 * {
-  cursor: url(images/slice.png), url(images/slice.png), pointer;
+  cursor: url(../images/slice.png), url(../images/slice.png), pointer;
 }
 
 html,
